feat: aggiornamento Angular 8

--- a/uniconvclient/src/assets/scss/style.scss
+++ b/uniconvclient/src/assets/scss/style.scss
@@ -23,7 +23,7 @@ File: scss
 @import 'widgets/widgets';
 
 //This is for the horizontal version if you are not using horizontal version you can remove this
-@import 'horizontal/horizontal';
+//@import 'horizontal/horizontal';
 
 //This is for the responsive (Required file)
 @import 'responsive';
